--- a/style.css
+++ b/style.css
@@ -740,7 +740,8 @@ h4 {
 }
 
 .white {
-    color: #FFFFFF!important;
+    color: rgb(74, 74, 74) !important; 
+    background-color: rgb(189, 189, 189);
 }
 
 .portfolio-thumb {
@@ -779,12 +780,12 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #F5A17A!important;
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
-    color: #FFFFFF!important;
+    color: rgb(66, 66, 66) !important; 
+    background-color: rgb(243, 151, 108);
 }
 
 .btn-atomic-tangerine:hover {
@@ -793,7 +794,7 @@ h4 {
 }
 
 .ltc-white {
-    color: #FFFFFF!important;
+    color: #4A4A4A!important;
 }
 
 .ltc-white:hover {
